[gd_scene load_steps=4 format=3 uid="uid://c87js4tsm8wg8"]

[ext_resource type="Script" path="res://Scenes/Characters/Luke/luke.gd" id="1_35q06"]
[ext_resource type="Script" path="res://Scripts/clickable.gd" id="1_giiuj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfhcg"]
size = Vector2(118, 347.5)

[node name="Luke" type="Node2D"]
script = ExtResource("1_35q06")

[node name="ClickableArea" type="Area2D" parent="."]
script = ExtResource("1_giiuj")

[node name="ClickZone" type="CollisionShape2D" parent="ClickableArea"]
shape = SubResource("RectangleShape2D_yfhcg")

[node name="Sprite2D" type="Sprite2D" parent="ClickableArea"]

[connection signal="area_clicked" from="ClickableArea" to="." method="_on_clickable_area_area_clicked"]
[connection signal="mouse_entered" from="ClickableArea" to="ClickableArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="ClickableArea" method="_on_mouse_exited"]
